# navOS

./: .gitignore  CMakeLists.txt  LICENSE  README.md  navos.ioc  stm32h743.ld
datasheet/: pinout.txt
include/: bsp.h  config.h  msp.h  spi.h  system.h  target.h  types.h
include/hal/: adc.h  core.h  debug.h  dwt.h  flash.h  gpio.h  power.h  rcc.h  reg.h  timer.h
source/: bsp.c  main.c  msp.c  spi.c  system.c  vector.c
stm32/Core/Include/: cmsis_gcc.h
stm32/Core_A/Include/: cmsis_gcc.h
